--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,5 +30,5 @@ jobs:
           file: ./app/Dockerfile
           push: true
           tags: | 
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.RESULT_APP_PATH }}:${{ github.ref_name }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.RESULT_APP_PATH }}:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.APP_PATH_PROD }}:${{ github.ref_name }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.APP_PATH_PROD }}:latest
