--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,21 +12,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Execute deployment command
-        uses: appleboy/ssh-action@v1.0.3
+        uses: appleboy/ssh-action@v0.1.7
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-          GIT_URL: ${{ vars.GIT_URL }}
-          APP_PATH_PROD: ${{ vars.APP_PATH_PROD }}
+          GIT_URL: ${{ secrets.GIT_URL }}
+          APP_PATH_PROD: ${{ secrets.APP_PATH_PROD }}
           APP_TAG: ${{ github.event.release.tag_name }}
     
         with:
           host: ${{ secrets.SSH_HOST_PROD }}
           username: ${{ secrets.SSH_USER_NAME_PROD }}
           key: ${{ secrets.SSH_PRIVATE_KEY_PROD }}
-          envs: APP_PATH_PROD, APP_TAG, GIT_URL,DOCKERHUB_USERNAME, DOCKERHUB_TOKEN
-          scripts: |
+          envs: APP_PATH_PROD, APP_TAG, GIT_URL, DOCKERHUB_USERNAME, DOCKERHUB_TOKEN
+          script: |
             sudo docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
 
             if [[ -d "/home/ubuntu/${APP_PATH_PROD}" ]]; then 
