--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -30,10 +30,19 @@ jobs:
 
       - name: Execute deployment command
         uses: appleboy/ssh-action@v0.1.8
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+          GIT_URL: ${{ vars.GIT_URL }}
+          APP_PATH_PROD: ${{ vars.APP_PATH_PROD }}
+          APP_TAG: ${{ github.event.release.tag_name }}
+
         with:
           host: ${{ secrets.SSH_HOST_PROD }}
           username: ${{ secrets.SSH_USER_NAME_PROD }}
           key: ${{ secrets.SSH_PRIVATE_KEY_PROD }}
+          envs: APP_PATH_PROD, APP_TAG, GIT_URL,DOCKERHUB_USERNAME, DOCKERHUB_TOKEN
+
           script: |
             sudo docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
 
