adding poetry pkg mngr and reduce container image size

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,24 @@
-FROM python:3.10
+FROM python:3.10-alpine
 
-COPY . ./app
+# Install poetry
+RUN pip install poetry
 
 WORKDIR /app
 
-RUN pip install -r requirements.txt
+# Copy dependency files
+COPY pyproject.toml poetry.lock /app/
+
+# Project initialization - add --no-root to avoid copying source code
+RUN poetry config virtualenvs.create false \
+    && poetry install --no-interaction --no-ansi --no-root
+
+# Copy the rest of the application
+COPY . /app/
+
+# Install project with poetry
+RUN poetry install --no-interaction --no-ansi
 
 EXPOSE 5000
 
+# Use direct command instead of poetry run
 CMD ["python", "app.py"]
