--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -78,7 +78,7 @@ jobs:
         run: |
           curl -X POST "${DD_URL}/api/v2/import-scan/" \
             -H "Authorization: Token ${DD_TOKEN}" \
-            -F "file=@snyk-results.json" \
+            -F "file=@app/snyk-results.json" \
             -F "scan_type=Snyk Scan" \
             -F "product_name=Trial-Tests" \
             -F "engagement_name=Snyk-Scan" \
