--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -63,8 +63,6 @@ jobs:
           echo "Current directory: $(pwd)"
           echo "Directory contents:"
           ls -la
-          echo "Looking for Python files:"
-          find . -name "requirements.txt" -o -name "poetry.lock" 2>/dev/null | head -5
           # Run Snyk test on the app directory
           cd app && snyk test --skip-unresolved --json > ../../snyk-results.json || true
           # Verify results file was created
@@ -78,7 +76,7 @@ jobs:
         run: |
           curl -X POST "${DD_URL}/api/v2/import-scan/" \
             -H "Authorization: Token ${DD_TOKEN}" \
-            -F "file=@app/snyk-results.json" \
+            -F "file=@snyk-results.json" \
             -F "scan_type=Snyk Scan" \
             -F "product_name=Trial-Tests" \
             -F "engagement_name=Snyk-Scan" \
